--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ document.getElementsByTagName("title")[0].innerText=t;
 
     var player = new Aliplayer({
     id: "playerCnt",
-    "source":"https://note-audio.xiaohongshu.com/picasso/" + Params + ".m3u8",
+    "source":"https://xhslive-video.xiaohongshu.com/picasso/" + Params + ".m3u8",
     width: "100%",
     height: "100%",
     autoplay: true,
